--- a/go/nginx.conf
+++ b/go/nginx.conf
@@ -36,7 +36,7 @@ http {
 	# Logging Settings
 	##
 
-	access_log /var/log/nginx/access.log;
+	access_log /var/log/nginx/access.log ltsv;
 	error_log /var/log/nginx/error.log;
 	log_format ltsv "time:$time_local"
                 "\thost:$remote_addr"
