--- a/go/sysctl.conf
+++ b/go/sysctl.conf
@@ -67,3 +67,7 @@
 #kernel.sysrq=438
 
 net.ipv4.ip_local_port_range=10000 65535
+net.core.somaxconn = 65535
+net.core.netdev_max_backlog = 16384
+net.core.rmem_max = 134217728
+net.core.wmem_max = 134217728
