--- a/go/mysql.cnf
+++ b/go/mysql.cnf
@@ -21,6 +21,6 @@
 !includedir /etc/mysql/mysql.conf.d/
 
 [mysqld]
-slow_query_log=ON
+slow_query_log=OFF
 long_query_time=0
 slow_query_log_file = /var/log/mysql/mysql-slow.log
