--- a/go/mysql.cnf
+++ b/go/mysql.cnf
@@ -24,3 +24,7 @@
 slow_query_log=OFF
 long_query_time=0
 slow_query_log_file = /var/log/mysql/mysql-slow.log
+
+innodb_buffer_pool_size = 500M
+innodb_flush_log_at_trx_commit = 2
+innodb_flush_method = O_DIRECT
